--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -12,6 +12,7 @@
         android:background="@color/colorPrimary">
 
         <EditText
+            android:id="@+id/activity_course_edit_text_title"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
