--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -11,57 +11,56 @@
         android:layout_weight="1"
         android:background="@color/colorPrimary">
 
-        <EditText
+        <TextView
             android:id="@+id/activity_course_edit_text_title"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/white"
+            android:text="Course Name"
             android:textColor="@android:color/white"
-            android:textColorHint="@color/colorGreyHorizontalRule"
-            android:hint="Course Name"
-            android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:layout_gravity="bottom" />
 
     </FrameLayout>
 
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="2"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_marginLeft="16dp"-->
+        <!--android:layout_marginRight="16dp"-->
+        <!--android:layout_marginTop="8dp">-->
+
+        <!--<android.support.v7.widget.CardView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:clipChildren="false"-->
+            <!--card_view:cardBackgroundColor="@android:color/white"-->
+            <!--card_view:cardCornerRadius="4dp"-->
+            <!--card_view:cardUseCompatPadding="true">-->
+
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/course_days_of_week"-->
+                <!--android:orientation="horizontal" />-->
+
+        <!--</android.support.v7.widget.CardView>-->
+
+
+    <!--</LinearLayout>-->
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:orientation="vertical"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:clipChildren="false"
-            card_view:cardBackgroundColor="@android:color/white"
-            card_view:cardCornerRadius="4dp"
-            card_view:cardUseCompatPadding="true">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/course_days_of_week"
-                android:orientation="horizontal" />
-
-        </android.support.v7.widget.CardView>
-
-
-    </LinearLayout>
-
-    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:id="@+id/course_module_card_holder">
+        android:id="@+id/course_module_card_holder"
+        android:layout_weight="4">
 
     </LinearLayout>
 
