--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ActionBarNoElevation" parent="AppTheme">
+        <item name="elevation">0dp</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="AppThemeNoElevation" parent="AppTheme">
+        <item name="android:actionBarStyle">@style/ActionBarNoElevation</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -19,6 +28,7 @@
 
     <style name="TextAppearance" parent="android:TextAppearance">
     </style>
+
 
     <style name="TextAppearance.RecurrencePickerStyle">
         <item name="android:textSize">15sp</item>
