--- a/app/src/main/res/layout/card_module_view.xml
+++ b/app/src/main/res/layout/card_module_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/project_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clipChildren="false"
@@ -39,9 +38,8 @@
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:id="@+id/module_topic_list_view">
-        </ListView>
+            android:layout_height="120dp"
+            android:id="@+id/module_topic_list_view" />
 
         <ProgressBar
             android:layout_width="match_parent"
@@ -55,11 +53,11 @@
             />
 
         <Button
-            android:id="@+id/project_edit_button"
+            android:id="@+id/module_update_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="Edit topics"
+            android:text="Update"
             android:layout_gravity="right" />
 
     </LinearLayout>
