In this version: * Saving and loading implemented in Course Manager * Saving and loading at correct times * Better empty state management

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,8 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_dashboard"
+        app:itemTextAppearance="@android:color/darker_gray"
+        app:itemIconTint="@color/navDrawerIconGray"
         app:menu="@menu/activity_dashboard_drawer" />
 
 
