--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -15,6 +15,11 @@
             android:id="@+id/nav_projects"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/nav_projects" />
+
+        <item
+            android:id="@+id/nav_exams"
+            android:icon="@drawable/ic_view_list_black_24dp"
+            android:title="@string/examinations" />
     </group>
 
     <group android:id="@+id/nav_bottom_menu"
