* Added expandable recycler view lists to Course Edit for modules * Better loading and saving * Project loading and saving * Overhauled package structure * Topic class separated * ViewHolders and Adapters separated

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,10 +42,8 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_dashboard"
-        app:itemTextAppearance="@android:color/darker_gray"
+        app:itemBackground="@android:color/transparent"
         app:itemIconTint="@color/navDrawerIconGray"
         app:menu="@menu/activity_dashboard_drawer" />
-
-
 
 </android.support.v4.widget.DrawerLayout>
