* Module addition and removal now works perfectly

--- a/app/src/main/res/layout/activity_course_edit.xml
+++ b/app/src/main/res/layout/activity_course_edit.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:clickable="true">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -16,6 +19,7 @@
             android:id="@+id/edit_course_course_name"
             android:hint="@string/course_name"
             android:gravity="center_horizontal"
+            android:imeOptions="actionDone"
             android:maxLines="1"
             android:inputType="textCapSentences|textAutoCorrect" />
 
@@ -27,12 +31,18 @@
         android:layout_weight="0.8"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:overScrollMode="never"
+        android:requiresFadingEdge="vertical"
+        android:fadingEdgeLength="5dp"
+        android:background="@drawable/list_background"
         android:id="@+id/course_edit_module_list"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:id="@+id/edit_course_plus_button"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:text="+1 Module"
