--- a/app/src/main/res/layout/expandable_list_item_child.xml
+++ b/app/src/main/res/layout/expandable_list_item_child.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="wrap_content"
@@ -15,7 +17,8 @@
             android:id="@+id/expandable_list_group_child_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="1"
+            android:textSize = "16sp"
+            android:inputType="textAutoCorrect|textCapSentences"
             android:layout_toLeftOf="@+id/expandable_list_group_child_checkbox"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
