--- a/app/src/main/res/layout/expandable_list_item_group.xml
+++ b/app/src/main/res/layout/expandable_list_item_group.xml
@@ -17,17 +17,19 @@
             android:id="@+id/expandable_list_group_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="16sp"
             android:padding="20dp"
+            android:textColor="@color/colorPrimaryDark"
             android:text="Module" />
 
         <ImageButton
             android:id="@+id/expandable_list_module_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginRight="16dp"
-            android:src="@drawable/ic_clear_black_24dp"
+            android:src="@drawable/ic_delete_black_24dp"
             android:background="@android:color/transparent"
-            android:tint="@color/colorGreyHorizontalRule"
+            android:tint="@color/colorPrimaryDark"
             android:contentDescription="Delete Module"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
