--- a/app/src/main/res/layout/expandable_list_item_group.xml
+++ b/app/src/main/res/layout/expandable_list_item_group.xml
@@ -19,7 +19,6 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:padding="20dp"
-            android:textColor="@color/colorPrimaryDark"
             android:text="Module" />
 
         <ImageButton
@@ -28,8 +27,8 @@
             android:layout_height="50dp"
             android:layout_marginRight="16dp"
             android:src="@drawable/ic_delete_black_24dp"
+            android:tint="@color/navDrawerIconGray"
             android:background="@android:color/transparent"
-            android:tint="@color/colorPrimaryDark"
             android:contentDescription="Delete Module"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
