* Modified how Course Activity handles module lists * Made changes persist and reflect in previous activities (still buggy)

--- a/app/src/main/res/layout/card_module_view.xml
+++ b/app/src/main/res/layout/card_module_view.xml
@@ -19,6 +19,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/module_card_title"
             android:text="Module 1"
             android:textSize="20sp"
             android:layout_marginLeft="16dp"
@@ -28,6 +29,7 @@
             />
 
         <TextView
+            android:id="@+id/module_card_total_topics"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/module_topics"
@@ -50,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:visibility="gone"
-            android:id="@+id/module_topic_list_view" />
+            android:id="@+id/module_card_topic_list_view" />
 
         <ProgressBar
             android:layout_width="match_parent"
@@ -58,17 +60,18 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"
+            android:id="@+id/module_card_progress_bar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:max="100"
             android:progress="25"
             />
 
         <Button
-            android:id="@+id/module_update_button"
+            android:id="@+id/module_card_edit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="Update"
+            android:text="Edit"
             android:layout_gravity="right" />
 
     </LinearLayout>
