--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -26,44 +26,10 @@
 
     </FrameLayout>
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_weight="2"-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_marginLeft="16dp"-->
-        <!--android:layout_marginRight="16dp"-->
-        <!--android:layout_marginTop="8dp">-->
-
-        <!--<android.support.v7.widget.CardView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:clipChildren="false"-->
-            <!--card_view:cardBackgroundColor="@android:color/white"-->
-            <!--card_view:cardCornerRadius="4dp"-->
-            <!--card_view:cardUseCompatPadding="true">-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/course_days_of_week"-->
-                <!--android:orientation="horizontal" />-->
-
-        <!--</android.support.v7.widget.CardView>-->
-
-
-    <!--</LinearLayout>-->
-
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/course_module_card_holder" />
-    </ScrollView>
+        android:layout_width="match_parent"
+        android:id="@+id/course_activity_module_list"
+        android:overScrollMode="never"/>
 
 </LinearLayout>
