--- a/app/src/main/res/layout/card_module_view.xml
+++ b/app/src/main/res/layout/card_module_view.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/module_card_card_view"
+    android:transitionName="test"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clipChildren="false"
-    android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginLeft="16dp"
+    android:foreground="?selectableItemBackground"
+    android:clickable="true"
     card_view:cardBackgroundColor="@android:color/white"
     card_view:cardCornerRadius="4dp"
     card_view:cardUseCompatPadding="true">
@@ -14,7 +17,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/module_card_shared_linear_layout"
+        >
 
         <TextView
             android:layout_width="match_parent"
@@ -26,6 +31,7 @@
             android:layout_marginRight="16dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
+            android:transitionName="title"
             />
 
         <TextView
@@ -36,23 +42,8 @@
             android:paddingBottom="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:transitionName="totalTopics"
             />
-
-        <TextView
-            android:id="@+id/module_has_no_topics"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="visible"
-            android:gravity="center"
-            android:padding="20dp"
-            android:textColor="@android:color/darker_gray"
-            android:text="No topics here. Add some!"/>
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:visibility="gone"
-            android:id="@+id/module_card_topic_list_view" />
 
         <ProgressBar
             android:layout_width="match_parent"
@@ -62,17 +53,8 @@
             android:layout_marginBottom="8dp"
             android:id="@+id/module_card_progress_bar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:max="100"
-            android:progress="25"
-            />
-
-        <Button
-            android:id="@+id/module_card_edit_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="Edit"
-            android:layout_gravity="right" />
+            android:max="10000"
+            android:transitionName="progressBar"/>
 
     </LinearLayout>
 
