--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -14,7 +14,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".Activities.MainActivity"
+        tools:context=".activities.MainActivity"
         tools:showIn="@layout/fragment_dashboard">
 
         <android.support.v7.widget.CardView
