--- a/app/src/main/res/layout/activity_module_update.xml
+++ b/app/src/main/res/layout/activity_module_update.xml
@@ -18,51 +18,50 @@
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:weightSum="1">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/module_card_title"
-                android:text="Module 1"
-                android:textSize="20sp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:transitionName="title"
-                />
-
-            <TextView
-                android:id="@+id/module_card_total_topics"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/module_topics"
-                android:paddingBottom="8dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:transitionName="totalTopics"
-                />
-
-            <ProgressBar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="8dp"
-                android:id="@+id/module_card_progress_bar"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:max="10000"
-                android:transitionName="progressBar"/>
-
-        <ListView
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:scrollbars="none"
-            android:visibility="gone"
-            android:id="@+id/dialog_module_list" />
+            android:layout_height="wrap_content"
+            android:id="@+id/module_card_title"
+            android:text="Module 1"
+            android:textSize="20sp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:transitionName="title"
+            />
+
+        <TextView
+            android:id="@+id/module_card_total_topics"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/module_topics"
+            android:paddingBottom="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:transitionName="totalTopics"
+            />
+
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="8dp"
+            android:id="@+id/module_card_progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:max="10000"
+            android:transitionName="progressBar"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:id="@+id/module_update_topic_list" />
 
     </LinearLayout>
 
