--- a/app/src/main/res/layout/list_item_courses.xml
+++ b/app/src/main/res/layout/list_item_courses.xml
@@ -1,65 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/project_card"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clipChildren="false"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginTop="8dp"
+    android:foreground="?selectableItemBackground"
     android:clickable="true"
-    android:focusable="true"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:background="?android:attr/selectableItemBackground"
-    >
+    card_view:cardBackgroundColor="@android:color/white"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardUseCompatPadding="true">
 
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textview_title"
-        android:paddingBottom="10dp"
-        android:text="Android Development and Design"
-        android:singleLine="true"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:id="@+id/textview_modules"
-        android:layout_below="@id/textview_title"
-        android:paddingBottom="5dp"
-        android:text="2/5 Modules finished"
-        android:singleLine="true"
-        android:textSize="14sp"
-        android:paddingLeft="5dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:id="@+id/textview_projects"
-        android:layout_below="@id/textview_title"
-        android:layout_alignParentRight="true"
-        android:text="2 Projects due"
-        android:singleLine="true"
-        android:textSize="14sp"
-        android:paddingBottom="5dp"
-        android:paddingRight="5dp" />
-
-    <ProgressBar
-        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-        android:id="@+id/progress_bar"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:layout_below="@id/textview_modules"
-        android:max="100"
-        android:progress="40" />
+        android:layout_height="wrap_content"
+        android:minHeight="?android:attr/listPreferredItemHeightSmall" >
 
-</RelativeLayout>
+        <TextView
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textview_title"
+            android:paddingBottom="10dp"
+            android:text="Android Development and Design"
+            android:singleLine="true"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
+            android:id="@+id/textview_modules"
+            android:layout_below="@id/textview_title"
+            android:paddingBottom="5dp"
+            android:text="2/5 Modules finished"
+            android:singleLine="true"
+            android:textSize="14sp"
+            android:paddingLeft="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
+            android:id="@+id/textview_projects"
+            android:layout_below="@id/textview_title"
+            android:layout_alignParentRight="true"
+            android:text="2 Projects due"
+            android:singleLine="true"
+            android:textSize="14sp"
+            android:paddingBottom="5dp"
+            android:paddingRight="5dp" />
+
+        <ProgressBar
+            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+            android:id="@+id/course_progress_bar"
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="6dp"
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:layout_below="@id/textview_modules"
+            android:max="10000"
+            android:progress="40" />
+
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
