* Bug fixes * Project List now works

--- a/app/src/main/res/layout/card_module_view.xml
+++ b/app/src/main/res/layout/card_module_view.xml
@@ -22,11 +22,12 @@
         >
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/module_card_title"
-            android:text="Module 1"
+            android:text="@string/module_list_title"
             android:textSize="20sp"
+            android:layout_marginTop="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:paddingTop="8dp"
@@ -36,7 +37,7 @@
 
         <TextView
             android:id="@+id/module_card_total_topics"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/module_topics"
             android:paddingBottom="8dp"
