--- a/app/src/main/res/layout/activity_module_update.xml
+++ b/app/src/main/res/layout/activity_module_update.xml
@@ -1,68 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.CardView android:layout_width="match_parent"
+<FrameLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/module_update_card_view"
-    android:transitionName="test"
-    android:clipChildren="false"
-    android:layout_marginTop="40dp"
-    android:layout_marginBottom="16dp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    card_view:cardBackgroundColor="@android:color/white"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardUseCompatPadding="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:weightSum="1">
+    <android.support.v7.widget.CardView android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/module_update_card_view"
+        android:transitionName="test"
+        android:clipChildren="false"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="80dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        card_view:cardBackgroundColor="@android:color/white"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardUseCompatPadding="true"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <TextView
-            android:layout_width="match_parent"
+        <RelativeLayout android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/module_card_title"
-            android:text="Module 1"
-            android:textSize="20sp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:transitionName="title"
-            />
+            android:orientation="vertical"
+            xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <TextView
-            android:id="@+id/module_card_total_topics"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/module_topics"
-            android:paddingBottom="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:transitionName="totalTopics"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/module_card_title"
+                android:text="@string/module_list_title"
+                android:textSize="20sp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:transitionName="title"
+                />
 
-        <ProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="8dp"
-            android:id="@+id/module_card_progress_bar"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:max="10000"
-            android:transitionName="progressBar"/>
+            <TextView
+                android:id="@+id/module_card_total_topics"
+                android:layout_below="@id/module_card_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/module_topics"
+                android:paddingBottom="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:transitionName="totalTopics"
+                />
 
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:id="@+id/module_update_topic_list" />
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/module_card_total_topics"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="8dp"
+                android:id="@+id/module_card_progress_bar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:max="10000"
+                android:transitionName="progressBar"/>
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/module_done_percent"
+                android:transitionName="module_percent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_above="@id/module_card_progress_bar"
+                android:textSize="20sp"
+                android:textColor="@color/navDrawerIconGray"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:text="@string/hundred_percent"
+                />
 
-</android.support.v7.widget.CardView>
+            <android.support.v7.widget.RecyclerView
+                android:layout_below="@id/module_card_progress_bar"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:id="@+id/module_update_topic_list" />
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@id/module_update_topic_list"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true">
+
+                <ImageButton
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/module_update_clear_all"
+                    android:src="@drawable/ic_clear_black_24dp"
+                    android:contentDescription="@string/action_clear_all"
+                    android:foreground="?selectableItemBackgroundBorderless"
+                    android:background="@android:color/transparent"
+                    />
+
+                <ImageButton
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/module_update_mark_done"
+                    android:src="@drawable/ic_playlist_add_check_black_24dp"
+                    android:contentDescription="@string/action_clear_all"
+                    android:foreground="?selectableItemBackgroundBorderless"
+                    android:background="@android:color/transparent"
+                    />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+</FrameLayout>
