--- a/app/src/main/res/layout/activity_module_update.xml
+++ b/app/src/main/res/layout/activity_module_update.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#96000000">
 
-    <android.support.v7.widget.CardView android:layout_width="match_parent"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/module_update_card_view"
-        android:transitionName="test"
+        android:transitionName="card_view"
         android:clipChildren="false"
         android:layout_marginTop="80dp"
         android:layout_marginBottom="80dp"
@@ -15,8 +17,8 @@
         android:layout_marginRight="16dp"
         card_view:cardBackgroundColor="@android:color/white"
         card_view:cardCornerRadius="4dp"
-        card_view:cardUseCompatPadding="true"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true">
 
         <RelativeLayout android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,9 +35,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:transitionName="title"
-                />
+                android:paddingBottom="8dp" />
 
             <TextView
                 android:id="@+id/module_card_total_topics"
@@ -45,9 +45,7 @@
                 android:text="@string/module_topics"
                 android:paddingBottom="8dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:transitionName="totalTopics"
-                />
+                android:layout_marginRight="16dp" />
 
             <ProgressBar
                 android:layout_width="match_parent"
@@ -58,8 +56,7 @@
                 android:layout_marginBottom="8dp"
                 android:id="@+id/module_card_progress_bar"
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:max="10000"
-                android:transitionName="progressBar"/>
+                android:max="10000" />
 
             <TextView
                 android:id="@+id/module_done_percent"
