--- a/app/src/main/res/layout/card_module_view.xml
+++ b/app/src/main/res/layout/card_module_view.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<FrameLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/framelayout"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp">
+
 <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/module_card_card_view"
-    android:transitionName="test"
+    android:transitionName="card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clipChildren="false"
-    android:layout_marginRight="16dp"
-    android:layout_marginLeft="16dp"
-    android:foreground="?selectableItemBackground"
     android:clickable="true"
     card_view:cardBackgroundColor="@android:color/white"
     card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="1dp"
     card_view:cardUseCompatPadding="true">
 
     <LinearLayout
@@ -32,7 +38,6 @@
             android:layout_marginRight="16dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
-            android:transitionName="title"
             />
 
         <TextView
@@ -43,7 +48,6 @@
             android:paddingBottom="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:transitionName="totalTopics"
             />
 
         <ProgressBar
@@ -54,9 +58,8 @@
             android:layout_marginBottom="8dp"
             android:id="@+id/module_card_progress_bar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:max="10000"
-            android:transitionName="progressBar"/>
+            android:max="10000" />
 
     </LinearLayout>
-
 </android.support.v7.widget.CardView>
+</FrameLayout>
