--- a/app/src/main/res/layout/expandable_list_item_child.xml
+++ b/app/src/main/res/layout/expandable_list_item_child.xml
@@ -13,12 +13,13 @@
         android:layout_alignParentStart="true"
         android:id="@+id/view">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/expandable_list_group_child_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize = "16sp"
             android:inputType="textAutoCorrect|textCapSentences"
+            android:imeOptions="actionNext"
             android:layout_toLeftOf="@+id/expandable_list_group_child_checkbox"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
