--- a/app/src/main/res/layout/expandable_list_item_group.xml
+++ b/app/src/main/res/layout/expandable_list_item_group.xml
@@ -27,7 +27,7 @@
             android:layout_height="50dp"
             android:layout_marginRight="16dp"
             android:src="@drawable/ic_delete_black_24dp"
-            android:tint="@color/navDrawerIconGray"
+            android:tint="@color/colorDarkerGrey"
             android:background="@android:color/transparent"
             android:contentDescription="Delete Module"
             android:layout_centerVertical="true"
