--- a/app/src/main/res/layout/list_item_projects.xml
+++ b/app/src/main/res/layout/list_item_projects.xml
@@ -44,7 +44,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/project_notes"
             android:layout_below="@id/project_due_date"
-            android:maxLines="6"
+            android:maxLines="3"
+            android:text="3 line\nText\nHere"
             android:ellipsize="end" />
 
         <LinearLayout android:layout_width="wrap_content"
