--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
+        android:id="@+id/activity_course_header"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@color/colorPrimary">
