--- a/app/src/main/res/layout/module_update_card.xml
+++ b/app/src/main/res/layout/module_update_card.xml
@@ -88,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:orientation="horizontal"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp">
