--- a/app/src/main/res/layout/list_item_projects.xml
+++ b/app/src/main/res/layout/list_item_projects.xml
@@ -56,6 +56,14 @@
             android:layout_below="@id/project_notes">
 
             <Button
+                android:id="@+id/project_next_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:text="@string/next"/>
+
+            <Button
                 android:id="@+id/project_edit_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
